--- a/baseline.html
+++ b/baseline.html
@@ -15,6 +15,26 @@
 		</div>
 	</head>
 
+	<style> /* set the CSS */
+
+body { font: 12px Arial;}
+
+/*path { 
+    stroke: steelblue;
+    stroke-width: 2;
+    fill: none;
+}*/
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: grey;
+    stroke-width: 1;
+    shape-rendering: crispEdges;
+}
+
+</style>
+
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.3.3/d3.min.js" type="text/javascript"></script>
 
 	<script Language = "JavaScript">
@@ -37,53 +57,114 @@
 
 
 		var coordinates = 
-			[{ "x1": VTL-1, "x2": VTL-1, "y": VLP},
-			{ "x1": VTL, "x2": VTH, "y": VLP},
+			[{ "x1": VTL-1, "x2": VTL-1, "y": VLM},
 			{ "x1": VTL, "x2": VTH, "y": VLM},
-			{ "x1": VTH+1, "x2": VTH+1, "y": VLM}]
+			{ "x1": VTL, "x2": VTH, "y": VLP},
+			{ "x1": VTH+1, "x2": VTH+1, "y": VLP}]
 
 		var data = coordinates.slice()
 		var x1Data = function(d) {return d.x1}
 		var x2Data = function(d) {return d.x2}
 		var yData = function(d) {return d.y}
 
+		var windowX = 500
+		var windowY = 400
+
+		// Set the dimensions of the canvas / graph
+		var margin = {top: 30, right: 20, bottom: 30, left: 50},
+		    width = 600 - margin.left - margin.right,
+		    height = 270 - margin.top - margin.bottom;
 
 
-		var x = d3.scale.linear()
-			.range([VTL-1, VTH+1])
-		    .domain([VTL-1, VTH+1])
+		// Set the ranges
+		var x = d3.scale.linear().range([0, width]);
+		var y = d3.scale.linear().range([height, 0]);
 
-		//Odd D3 "intended feature" means y range is defined biggest to smallest
-		//while y domain is smallest to largest 
-		var y = d3.scale.linear()
-		    .range([VLP, VLM])
-		    .domain([VLM, VLP])
+		// Define the axes
+		var xAxis = d3.svg.axis().scale(x)
+		    .orient("bottom").ticks(5);
 
-		var graphingFunct1 = d3.svg.line()
-			.x(function(d) {return d.x1*20})
-			.y(function(d) {return d.y*20})
-			.interpolate("linear");
+		var yAxis = d3.svg.axis().scale(y)
+		    .orient("left").ticks(5);
 
-		var graphingFunct2 = d3.svg.line()
-			.x(function(d) {return d.x2*20})
-			.y(function(d) {return d.y*20})
-			.interpolate("linear");
 
-		var svg = d3.select("body").append("svg")
-			.attr("width", 500)
-			.attr("height", 400)
+		// Define the line
+		var valueline = d3.svg.line()
+		    .x(function(d) { return x(d.x1); })
+		    .y(function(d) { return y(d.y); });
 
-		var graphProper = svg.append("path")
-			.attr("d", graphingFunct1(coordinates))
-			.attr("stroke", "blue")
-			.attr("stroke-width", 2)
-			.attr("fill", "none")
+		// Define the second line
+		var valueline2 = d3.svg.line()
+		    .x(function(d) { return x(d.x2); })
+		    .y(function(d) { return y(d.y); });
+		    
+		// Adds the svg canvas
+		var svg = d3.select("body")
+		    .append("svg")
+		        .attr("width", width + margin.left + margin.right)
+		        .attr("height", height + margin.top + margin.bottom)
+		    .append("g")
+		        .attr("transform", 
+		              "translate(" + margin.left + "," + margin.top + ")");
 
-		svg.append("path")
-			.attr("d", graphingFunct2(coordinates))
-			.attr("stroke", "red")
-			.attr("stroke-width", 2)
-			.attr("fill", "none")
+		x.domain([VTL-1, VTH+1]);
+    	y.domain([VLM, VLP]);
+
+	    // Add the valueline path.
+	    svg.append("path")
+	        .attr("class", "line")
+	        .attr("d", valueline(coordinates))
+	        .attr("stroke-width", 2)
+	        .attr("stroke", "blue")
+	        .attr("fill", "none")
+
+
+	    // Add the valueline2 path.
+	    svg.append("path")
+	        .attr("class", "line")
+	        .attr("d", valueline2(coordinates))
+	        .attr("stroke-width", 2)
+	        .attr("stroke", "red")
+	        .attr("fill", "none")  
+
+	    // Add the X Axis
+	    svg.append("g")
+	        .attr("class", "x axis")
+	        .attr("transform", "translate(0," + height + ")")
+	        .call(xAxis);
+
+	    // Add the Y Axis
+	    svg.append("g")
+	        .attr("class", "y axis")
+	        .call(yAxis);
+
+
+
+		// var graphingFunct1 = d3.svg.line()
+		// 	.x(function(d) {return (d.x1*xScale)})
+		// 	.y(function(d) {return (d.y*yScale)})
+		// 	.interpolate("linear");
+
+		// var graphingFunct2 = d3.svg.line()
+		// 	.x(function(d) {return (d.x2*xScale)})
+		// 	.y(function(d) {return (d.y*yScale)})
+		// 	.interpolate("linear");
+
+		// var svg = d3.select("body").append("svg")
+		// 	.attr("width", windowX)
+		// 	.attr("height", windowY)
+
+		// var graphProper = svg.append("path")
+		// 	.attr("d", graphingFunct1(coordinates))
+		// 	.attr("stroke", "blue")
+		// 	.attr("stroke-width", 1)
+		// 	.attr("fill", "none")
+
+		// svg.append("path")
+		// 	.attr("d", graphingFunct2(coordinates))
+		// 	.attr("stroke", "red")
+		// 	.attr("stroke-width", 1)
+		// 	.attr("fill", "none")
 
 
 		// svg.selectAll("path").data(data).enter()
