--- a/baseline.html
+++ b/baseline.html
@@ -10,7 +10,7 @@
 		<title>EE 230 :  Topics</title>		
 
 		 <div id="d1" style="position:absolute; top:200px; left:500px; z-index:1; border-width:1px;"></div>
-		 <div id="d2" style="position:absolute; top:1200px; left:500px; z-index:1; border-width:1px;"></div>
+		 <div id="d2" style="position:absolute; top:750px; left:500px; z-index:1; border-width:1px;"></div>
 	</head>
 
 	<style> /* set the CSS */
@@ -27,16 +27,6 @@
     stroke: grey;
     stroke-width: 1;
     shape-rendering: crispEdges;
-}
-
-foo {
-	position:absolute; 
-	top:500px; 
-	left:1000px; 
-	z-index:1; 
-	border-width:1px; 
-	width:600px; 
-	height:270px;
 }
 
 
@@ -61,18 +51,98 @@ foo {
 		obj.VTH.value = VTH
 		obj.hyst.value = hyst
 
+		update(VLP, VLM, VTL, VTH, "#d1");
+
+	}
 
 
+	function update(VLP, VLM, VTL, VTH, div) {
 		var coordinates = 
 			[{ "x1": VTL-1, "x2": VTL-1, "y": VLM},
 			{ "x1": VTL, "x2": VTH, "y": VLM},
 			{ "x1": VTL, "x2": VTH, "y": VLP},
 			{ "x1": VTH+1, "x2": VTH+1, "y": VLP}]
 
-		//Let me axe you a question...
-		var axes = 
-			[{"x1": VTL-1, "x2": 0, "y1": 0, "y2": VLP}, 
-			{"x1": VTH+1, "x2": 0, "y1": 0, "y2": VLM}]
+				// Set the dimensions of the canvas / graph
+		var margin = {top: 30, right: 20, bottom: 30, left: 50},
+		    width = 600 - margin.left - margin.right,
+		    height = 270 - margin.top - margin.bottom;
+
+
+		// Set the ranges
+		var x = d3.scale.linear().range([0, width]);
+		var y = d3.scale.linear().range([height, 0]);
+
+		// Define the axes
+		var xAxis = d3.svg.axis().scale(x)
+		    .orient("bottom").ticks(5);
+
+		var yAxis = d3.svg.axis().scale(y)
+		    .orient("left").ticks(5);
+
+		// Define the line
+		var valueline = d3.svg.line()
+		    .x(function(d) { return x(d.x1); })
+		    .y(function(d) { return y(d.y); });
+
+		// Define the second line
+		var valueline2 = d3.svg.line()
+		    .x(function(d) { return x(d.x2); })
+		    .y(function(d) { return y(d.y); });
+
+		x.domain([VTL-1, VTH+1]);
+    	y.domain([VLM, VLP]); 
+
+		// Adds the svg canvas
+		var svg = d3.select(div).transition();
+
+
+		if (VLM <= 0) {
+			padding = (-VLM*(210/(VLP-VLM)))
+		} else {
+			padding = 0
+		}
+
+
+
+	    // Add the valueline path.
+	    svg.select(".line")
+	        .duration(750)
+	        .attr("d", valueline(coordinates))
+	        .attr("stroke", "blue")
+
+
+	    // Add the valueline2 path.
+	    svg.select(".line2")
+	        .duration(750)
+	        .attr("d", valueline2(coordinates))
+	        .attr("stroke", "red")
+
+	    // Add the X Axis
+	    svg.select(".x.axis")
+	        .duration(750)
+	        .attr("transform", "translate(0," + (height - padding) + ")")
+	        .call(xAxis);
+
+	    // Add the Y Axis
+	    svg.select(".y.axis")
+	        .duration(750)
+	        .call(yAxis);
+	}
+
+	function init(div) {
+
+
+		VTL = 2.5
+		VTH = 5
+		VLP = 4
+		VLM = 0
+
+		var coordinates = 
+			[{ "x1": VTL-1, "x2": VTL-1, "y": VLM},
+			{ "x1": VTL, "x2": VTH, "y": VLM},
+			{ "x1": VTL, "x2": VTH, "y": VLP},
+			{ "x1": VTH+1, "x2": VTH+1, "y": VLP}]
 
 
 		// Set the dimensions of the canvas / graph
@@ -103,16 +173,9 @@ foo {
 		    .x(function(d) { return x(d.x2); })
 		    .y(function(d) { return y(d.y); });
 
-		var xAxe = d3.svg.line()
-		    .x(x(axes.x1))
-		    .y(y(axes.y1));
-
-		var yAxe = d3.svg.line()
-		    .x(function(d) { return x(axes.x2); })
-		    .y(function(d) { return y(axes.y2); });
 		    
 		// Adds the svg canvas
-		var svg = d3.select("#d1")
+		var svg = d3.select(div)
 		    .append("svg")
 		        .attr("width", width + margin.left + margin.right)
 		        .attr("height", height + margin.top + margin.bottom)
@@ -128,16 +191,16 @@ foo {
 	        .attr("class", "line")
 	        .attr("d", valueline(coordinates))
 	        .attr("stroke-width", 2)
-	        .attr("stroke", "blue")
+	        .attr("stroke", "white")
 	        .attr("fill", "none")
 
 
 	    // Add the valueline2 path.
 	    svg.append("path")
-	        .attr("class", "line")
+	        .attr("class", "line2")
 	        .attr("d", valueline2(coordinates))
 	        .attr("stroke-width", 2)
-	        .attr("stroke", "red")
+	        .attr("stroke", "white")
 	        .attr("fill", "none")  
 
 	    // Add the X Axis
@@ -169,11 +232,15 @@ foo {
 	obj.VTH.value = VTH
 	obj.hyst.value = hyst
 
+	update(VLP, VLM, VTL, VTH, "#d2")
+
 	}
+
+	window.onload=init("#d1")
+	window.onload=init("#d2")
 	</script>
 	
 	<body>
-
 
 
 			<h2>Comparator Calculators</h2>	
