--- a/calc.html
+++ b/calc.html
@@ -466,6 +466,15 @@
 
 		</article>
  
-		
+		<div class="footer">
+			<span class="leftfooter">
+				This page last modified on
+					 Wednesday October 28, 2015 by Benjamin Engebrecht
+			</span>
+			<span class="rightfooter">
+				&copy; 2015 <a href="mailto:gtuttle@iastate.edu">Gary Tuttle
+			</span>
+		</div>	 
+
 	</body>
 </html>
